--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
     <title>Feira de Porfissões</title>
+
 </head>
 <body>
 
 <!-- header -->
 
 <header>
-  <nav>
-    <a class="logo" href="#">Engenharia da Computação</a>
-    <div class="mobile-menu">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-    <ul class="nav-list">
-      <li><a href="#perfil" class="a">Perfil</a></li>
-      <li><a href="#curso" class="a">Curso</a></li>
-      <li><a href="#pos_graduacao" class="a">Pós-Graduação</a></li>
-      <li><a href="#mercado_trabalho" class="a">Mercado de Trabalho</a></li>
-      <li><a href="#depoimento" class="a">Depoimento</a></li>
-    </ul>
-  </nav>
-</header>
-<main></main>
-<script src="javascript/mobile-navbar.js"></script>
+      <nav class="nav_bar">
+        <a class="logo" href="/">Engenharia da Computação</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="#perfil" class="a">Perfil</a></li>
+          <li><a href="#curso" class="a">Curso</a></li>
+          <li><a href="#pos_graduacao" class="a">Pós-Graduação</a></li>
+          <li><a href="#mercado_trabalho" class="a">Mercado de Trabalho</a></li>
+          <li><a href="#depoimento" class="a">depoimento</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container-fluid"></main>
+    <script src="javascript/mobile-navbar.js"></script>
 
 <!-- Inicio da Landing Page -->
 
@@ -64,8 +65,8 @@
       O engenheiro de computação projeta soluções em tecnologia da informação, identificando problemas e oportunidades. Ele cria protótipos, valida novas tecnologias e projeta aplicativos em linguagem de baixo, médio e alto nível. O profissional da Engenharia de Computação também implementa soluções em tecnologia da informação, gerencia ambientes operacionais, elabora documentação, fornece suporte técnico e organiza treinamentos a usuários. A carreira em Engenharia de Computação oferece boas perspectivas, pois é uma área que continua aquecida mesmo com o país em crise. Há elevada demanda por profissionais qualificados, especialmente na área de big data e desenvolvimento de aplicativos.
     </p>
   </div>
-  <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-    <img src="" class="img_perfil">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="perfil_img">
+    <img src="img/perfil.jpg" class="img_perfil">
   </div>
 
 
@@ -476,7 +477,7 @@
           O aluno, para participar do curso, deve ter vontade de se aprofundar em temas importantes de gestão e de tecnologia de sistemas computacionais. Ter vontade de liderar e de comandar é fundamental para o especialista que pode assumir um posto de comando em empresas. Também, entende-se que o espírito empreendedor pode auxiliar o aluno para, com os conhecimentos trabalhados nas disciplinas do curso, montar sua própria empresa ou trabalhar como um consultor no mercado de trabalho. Público-alvo: engenheiros, tecnólogos, gestores de TI em empresas, desenvolvedores de software, empreendedores, produtores na área de tecnologia e demais profissionais graduados que desejam especialização no mundo da tecnologia da informação.
         </p>
     </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-2">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-2" id="aluno_img">
       <img src="img/aluno.png" class="img_aluno">
     </div>
   </div>
@@ -501,8 +502,8 @@
           Se você tem muito interesse em se tornar um Engenheiro de Computação, a dica é se desenvolver, principalmente, para a área de controle e automação. Isso porque as indústrias e fábricas precisam sempre aprimorar os processos para se manterem à frente no mercado e garantirem a inovação. Não à toa tantas indústrias têm apostado em setores de inovação, se aproximando de startups. O desenvolvimento e o aprimoramento de softwares também é outro campo de oportunidade que merece destaque. Com certeza você já ouviu sobre companhias SaaS, ou seja, de Software as a Service, que têm crescido muito ao oferecerem os mais variados sistemas para empresas dos mais diversos tamanhos.
         </p>
       </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-        <img src="" class="img_mercado">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="mercado_img">
+        <img src="img/mercado.jpg" class="img_mercado">
       </div>
     
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
