--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@
           </div>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="icones">
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://twitter.com/amandazzoc"><i class="bi bi-twitter" id="icone_footer"></i></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.instagram.com/amandazzoc/?utm_medium=copy_link"><i class="bi bi-instagram" id="icone_footer"></i></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.linkedin.com/in/amanda-oliveira-970410232/"><i class="bi bi-linkedin" id="icone_footer"></i></svg></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://github.com/amandazzoc"><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-twitter" id="icone_footer"></i></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-instagram" id="icone_footer"></i></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-linkedin" id="icone_footer"></i></svg></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
         </ul>
       </footer>
   </footer>
