--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <header>
       <nav class="nav_bar">
-        <a class="logo" href="/">Engenharia da Computação</a>
+        <a class="logo" href="#">Engenharia de Computação</a>
         <div class="mobile-menu">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -73,7 +73,7 @@
 <div class="container" id="requisitos">
   <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Requisitos</h4>
+        <h4 class="display-7">Requisitos</h4>
       <p class="card-text">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
 
         Para começar a atuar como um engenheiro de computação, existem dois pré-requisitos:
@@ -122,7 +122,7 @@
   
 
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="como">
-  <h3 class="display-7">Como é o curso</h3>
+  <h4 class="display-7">Como é o curso</h4>
     <hr>
   <p>
     O curso de Engenharia de Computação habilita a pessoa para trabalhar com o desenvolvimento e planejamento de softwares e hardwares. Com essa formação, ela poderá projetar, programar e gerenciar sistemas computacionais, além de criar e projetar computadores, periféricos e circuitos. De acordo com o Ministério da Educação (MEC), a obtenção de qualquer diploma em Engenharia está condicionada à produção de um trabalho de conclusão de curso (TCC) e estágio obrigatório supervisionado de no mínimo 160 horas. O MEC também estabelece diretrizes sobre quanto tempo dura o curso de Engenharia de Computação: é obrigatório que a graduação tenha pelo menos 3.200 horas totais. A duração média é de 5 anos. De acordo com as Diretrizes Curriculares Nacionais definidas pelo Ministério da Educação, o curso de Engenharia de Computação deve contar com os seguintes conteúdos básicos e tecnológicos:
@@ -316,142 +316,116 @@
   <hr>
 </div>
 <div class="container-slider">
-  <div class="slide-container swiper">
-    <div class="slide-content">
-        <div class="card-wrapper swiper-wrapper">
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+    <div class="slide-container swiper">
+        <div class="slide-content">
+            <div class="card-wrapper swiper-wrapper">
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile1.jpg" alt="" class="card-img">-->
+                        <div class="card-image">
+                            <img src="img/fiap.png" alt="" class="card-img">
+                        </div>
+                    </div>
+
+                    <div class="card-content">
+                        <h2 class="name">Fiap</h2>
+                        <p class="description">Duração: 5 Anos<br>
+                        Mensalidade: 2.295,00</p>
+                        <a target="_blank" href="https://www.fiap.com.br/graduacao/bacharelado/engenharia-de-computacao/"><button class="button">Ver Mais</button></a>
                     </div>
                 </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/unopar.jpg" alt="" class="card-img">
+                        </div>
+                    </div>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile2.jpg" alt="" class="card-img">-->
+                    <div class="card-content">
+                        <h2 class="name">Unopar</h2>
+                        <p class="description">Duração: 10 Semetres<br>
+                        Mensalidade: 750,00</p>
+
+                        <a target="_blank" href="https://www.unopar.com.br/curso/engenharia-da-computacao-bacharelado/"><button class="button">Ver Mais</button></a>
                     </div>
                 </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/unisa.png" alt="" class="card-img">
+                        </div>
+                    </div>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile3.jpg" alt="" class="card-img">-->
+                    <div class="card-content">
+                        <h2 class="name">Unisa</h2>
+                        <p class="description">Duração: 4 Anos<br>
+                            Mensalidade: 750,00</p>
+
+                        <a target="_blank" href="https://www.unisa.br/cursos/graduacao/engenharia-da-computacao/"><button class="button">Ver Mais</button></a>
                     </div>
                 </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/descomplica.png" alt="" class="card-img">
+                        </div>
+                    </div>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile4.jpg" alt="" class="card-img">-->
+                    <div class="card-content">
+                        <h2 class="name">Faculdade Descomplica</h2>
+                        <p class="description">Duração: 4 Anos<br>
+                            Mensalidade: 379,00</p>
+
+                        <a target="_blank" href="https://descomplica.com.br/faculdade/engenharia/engenharia-da-computacao/"><button class="button">Ver Mais</button></a>
                     </div>
                 </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+                        <div class="card-image">
+                            <img src="img/anhanguera.webp" alt="" class="card-img">-->
+                        </div>
+                    </div>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile5.jpg" alt="" class="card-img">-->
+                    <div class="card-content">
+                        <h2 class="name">Faculdade Anhanguera</h2>
+                        <p class="description">Duração: 10 Semestres<br>
+                            Mensalidade: 379,00</p>
+
+                        <a target="_blank" href="https://www.anhanguera.com/curso/engenharia-da-computacao/"><button class="button">Ver Mais</button></a>
                     </div>
                 </div>
+                <div class="card swiper-slide">
+                    <div class="image-content">
+                        <span class="overlay"></span>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
-
-                    <div class="card-image">
-                        <!--<img src="images/profile6.jpg" alt="" class="card-img">-->
+                        <div class="card-image">
+                            <img src="img/anhembi.jpg" alt="" class="card-img">
+                        </div>
                     </div>
-                </div>
 
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
+                    <div class="card-content">
+                        <h2 class="name">Anhembi Morumbi</h2>
+                        <p class="description">Duração: 10 Semestres<br>
+                            Mensalidade: 923,00</p>
 
-                    <div class="card-image">
-                        <!--<img src="images/profile7.jpg" alt="" class="card-img">-->
+                        <a target="_blank" href="https://portal.anhembi.br/graduacao/engenharia-da-computacao/"><button class="button">Ver Mais</button></a>
                     </div>
-                </div>
-
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
-
-                    <div class="card-image">
-                        <!--<img src="images/profile8.jpg" alt="" class="card-img">-->
-                    </div>
-                </div>
-
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-            <div class="card swiper-slide">
-                <div class="image-content">
-                    <span class="overlay"></span>
-
-                    <div class="card-image">
-                        <!--<img src="images/profile9.jpg" alt="" class="card-img">-->
-                    </div>
-                </div>
-
-                <div class="card-content">
-                    <h2 class="name">David Dell</h2>
-                    <p class="description">The lorem text the section that contains header with having open functionality. Lorem dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
         </div>
+        <div class="swiper-button-next swiper-navBtn"></div>
+        <div class="swiper-button-prev swiper-navBtn"></div>
+        <div class="swiper-pagination"></div>
     </div>
-
-    <div class="swiper-button-next swiper-navBtn"></div>
-    <div class="swiper-button-prev swiper-navBtn"></div>
-    <div class="swiper-pagination"></div>
-</div>
 </div>
 </div>
 </div>
@@ -471,7 +445,7 @@
   </div>
   
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="aluno">
-      <h3 class="display-7">Perfil do Aluno</h3>
+      <h4 class="display-7">Perfil do Aluno</h4>
         <hr>
         <p>
           O aluno, para participar do curso, deve ter vontade de se aprofundar em temas importantes de gestão e de tecnologia de sistemas computacionais. Ter vontade de liderar e de comandar é fundamental para o especialista que pode assumir um posto de comando em empresas. Também, entende-se que o espírito empreendedor pode auxiliar o aluno para, com os conhecimentos trabalhados nas disciplinas do curso, montar sua própria empresa ou trabalhar como um consultor no mercado de trabalho. Público-alvo: engenheiros, tecnólogos, gestores de TI em empresas, desenvolvedores de software, empreendedores, produtores na área de tecnologia e demais profissionais graduados que desejam especialização no mundo da tecnologia da informação.
@@ -608,10 +582,10 @@
           </div>
         </div>
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="icones">
-          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-twitter" id="icone_footer"></i></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-instagram" id="icone_footer"></i></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href="https://twitter.com/yamasss_"><i class="bi bi-twitter" id="icone_footer"></i></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.instagram.com/yaamasss/"><i class="bi bi-instagram" id="icone_footer"></i></a></li>
           <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-linkedin" id="icone_footer"></i></svg></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
+          <li class="ms-3"><a class="text-muted" target="_blank" href="https://github.com/yHiroshiz"><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
         </ul>
       </footer>
   </footer>
