--- a/index.html
+++ b/index.html
@@ -24,35 +24,50 @@
 
 <!-- header -->
 
-<header>
-      <nav class="nav_bar">
-        <a class="logo" href="#">Engenharia de Computação</a>
-        <div class="mobile-menu">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" id="tilt" href="#">Engenharia de Computação</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">Engenharia de Computação</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav flex-grow-1 pe-3 overflow-hidden justify-content-end" data-bs-dismiss="offcanvas" aria-label="Close">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#perfil">Perfil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#curso">Curso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#pos_graduacao">Pós-Graduação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#mercado_trabalho">Mercado de Trabalho</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#depoimento">Depoimento</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <ul class="nav-list">
-          <li><a href="#perfil" class="a">Perfil</a></li>
-          <li><a href="#curso" class="a">Curso</a></li>
-          <li><a href="#pos_graduacao" class="a">Pós-Graduação</a></li>
-          <li><a href="#mercado_trabalho" class="a">Mercado de Trabalho</a></li>
-          <li><a href="#depoimento" class="a">depoimento</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="container-fluid"></main>
-    <script src="javascript/mobile-navbar.js"></script>
+    </div>
+</nav>
+<main class="container-fluid"></main>
 
 <!-- Inicio da Landing Page -->
 
 <!-- Perfil -->
 
-<div class="container">
+<div class="container" id="perfil">
 
 <div class="row">
 
-<div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="perfil">
+<div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
   <h4 class="display-6">Perfil</h4>
   <hr>
   <p>
@@ -91,11 +106,11 @@
 
 <!-- Curso -->
 
-<div class="container">
+<div class="container" id="curso">
 
   <div class="row">
   
-  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="curso">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Curso</h4>
     <hr>
     <p>
@@ -104,7 +119,7 @@
   </div>
   
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-    <div class="card" id="card_curso">
+    <div class="card">
       <div class="card-body">
         <p class="card-text">Além disso o Engenheiro de Computação aborda os mais diversos aspectos tecnológicos, tais como: redes de computadores, comunicação de dados, bancos de dados, computação gráfica, sistemas digitais, circuitos elétricos, robótica e automação, entre outros. Em geral, o curso de Engenharia de Computação estuda, de forma profunda e abrangente, o desenvolvimento e gerência de sistemas digitais e elétricos, suas aplicações e tecnologias relacionadas.
           </p>
@@ -112,7 +127,7 @@
     </div>
   </div>
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-    <div class="card" id="card_curso">
+    <div class="card">
       <div class="card-body">
         <p class="card-text">O engenheiro de computação também poderá atuar em organizações que necessitem de instalação, operação e manutenção da rede de computadores, transmissão de dados e sistemas de automação comercial e industrial. Há ainda a opção de se manter no meio acadêmico, para dar aulas em universidades e desenvolver pesquisas. O tipo de formação para o curso de Engenharia de Computação é: bacharelado.
           </p>
@@ -432,11 +447,11 @@
 
 <!-- Pós-graduação -->
 
-<div class="container">
+<div class="container" id="pos_graduacao">
 
   <div class="row">
   
-  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="pos_graduacao">
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Pós-Graduação</h4>
     <hr>
     <p>
@@ -459,11 +474,11 @@
 
 <!-- Mercado de Trabalho -->
 
-  <div class="container">
+  <div class="container" id="mercado_trabalho">
 
     <div class="row">
     
-    <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="mercado_trabalho">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
       <h4 class="display-6">Mercado de Trabalho</h4>
       <hr>
       <p>
@@ -558,15 +573,16 @@
   </div>
 </div>
 
+<div class="container" id="depoimento">
 
-<div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="depoimento">
+    <div class="row">
+
+<div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
   <h4 class="display-6">Depoimento</h4>
   <hr>
-  <video playsinline autoplay muted loop loading="lazy" class="depoimento_video">
-    <source src="https://www.youtube.com/embed/69-WfrVBli8" type="video/mp4">
-</video>
 </div>
-
+</div>
+</div>
 <footer id="footer">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
