--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
   <h4 class="display-6">Perfil</h4>
   <hr>
-  <p>
-    A carreira em Engenharia da Computação O profissional formado em Engenharia da Computação é capaz de projetar e construir hardware e software. O hardware consiste na parte física do computador, suas estruturas e componentes e seus periféricos (como teclado, mouse e monitor). Nessa área, o engenheiro de computação faz a integração de circuitos eletrônicos da máquina e desenvolve placas de ligação entre o equipamento e seus acessórios.
+  <p class="fst-normal fs-5">
+    O profissional formado em Engenharia da Computação é capaz de projetar e construir hardware e software. O hardware consiste na parte física do computador, suas estruturas e componentes e seus periféricos (como teclado, mouse e monitor). Nessa área, o engenheiro de computação faz a integração de circuitos eletrônicos da máquina e desenvolve placas de ligação entre o equipamento e seus acessórios.
   </p>
 </div>
 
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-    <p class="fst-normal">
+    <p class="fst-normal fs-5">
       O engenheiro de computação projeta soluções em tecnologia da informação, identificando problemas e oportunidades. Ele cria protótipos, valida novas tecnologias e projeta aplicativos em linguagem de baixo, médio e alto nível. O profissional da Engenharia de Computação também implementa soluções em tecnologia da informação, gerencia ambientes operacionais, elabora documentação, fornece suporte técnico e organiza treinamentos a usuários. A carreira em Engenharia de Computação oferece boas perspectivas, pois é uma área que continua aquecida mesmo com o país em crise. Há elevada demanda por profissionais qualificados, especialmente na área de big data e desenvolvimento de aplicativos.
     </p>
   </div>
@@ -89,7 +89,7 @@
   <div class="card">
     <div class="card-body">
         <h4 class="display-7">Requisitos</h4>
-      <p class="card-text">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
+      <p class="card-text fs-5">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
 
         Para começar a atuar como um engenheiro de computação, existem dois pré-requisitos:
         <hr>
@@ -113,15 +113,14 @@
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Curso</h4>
     <hr>
-    <p>
+    <p class="fst-normal fs-5">
       O curso foca no estudo integrando as áreas de Engenharia Elétrica (hardware) e Ciência da Computção (software), também dando base para as áreas de gerenciamento de projetos, modelagem, desenvolvimento e avaliação de sistemas.
     </p>
   </div>
-  
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
     <div class="card">
       <div class="card-body">
-        <p class="card-text">Além disso o Engenheiro de Computação aborda os mais diversos aspectos tecnológicos, tais como: redes de computadores, comunicação de dados, bancos de dados, computação gráfica, sistemas digitais, circuitos elétricos, robótica e automação, entre outros. Em geral, o curso de Engenharia de Computação estuda, de forma profunda e abrangente, o desenvolvimento e gerência de sistemas digitais e elétricos, suas aplicações e tecnologias relacionadas.
+        <p class="card-text fs-5">Além disso o Engenheiro de Computação aborda os mais diversos aspectos tecnológicos, tais como: redes de computadores, comunicação de dados, bancos de dados, computação gráfica, sistemas digitais, circuitos elétricos, robótica e automação, entre outros. Em geral, o curso de Engenharia de Computação estuda, de forma profunda e abrangente, o desenvolvimento e gerência de sistemas digitais e elétricos, suas aplicações e tecnologias relacionadas.
           </p>
       </div>
     </div>
@@ -129,17 +128,17 @@
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
     <div class="card">
       <div class="card-body">
-        <p class="card-text">O engenheiro de computação também poderá atuar em organizações que necessitem de instalação, operação e manutenção da rede de computadores, transmissão de dados e sistemas de automação comercial e industrial. Há ainda a opção de se manter no meio acadêmico, para dar aulas em universidades e desenvolver pesquisas. O tipo de formação para o curso de Engenharia de Computação é: bacharelado.
+        <p class="card-text fs-5">O engenheiro de computação também poderá atuar em organizações que necessitem de instalação, operação e manutenção da rede de computadores, transmissão de dados e sistemas de automação comercial e industrial. Há ainda a opção de se manter no meio acadêmico, para dar aulas em universidades e desenvolver pesquisas. O tipo de formação para o curso de Engenharia de Computação é: bacharelado.
           </p>
       </div>
     </div>
-  </div>
+</div>
   
 
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="como">
-  <h4 class="display-7">Como é o curso</h4>
+  <h4 class="display-7 fs-3">Como é o curso</h4>
     <hr>
-  <p>
+  <p class="fst-normal fs-5">
     O curso de Engenharia de Computação habilita a pessoa para trabalhar com o desenvolvimento e planejamento de softwares e hardwares. Com essa formação, ela poderá projetar, programar e gerenciar sistemas computacionais, além de criar e projetar computadores, periféricos e circuitos. De acordo com o Ministério da Educação (MEC), a obtenção de qualquer diploma em Engenharia está condicionada à produção de um trabalho de conclusão de curso (TCC) e estágio obrigatório supervisionado de no mínimo 160 horas. O MEC também estabelece diretrizes sobre quanto tempo dura o curso de Engenharia de Computação: é obrigatório que a graduação tenha pelo menos 3.200 horas totais. A duração média é de 5 anos. De acordo com as Diretrizes Curriculares Nacionais definidas pelo Ministério da Educação, o curso de Engenharia de Computação deve contar com os seguintes conteúdos básicos e tecnológicos:
   </p>
 </div>
@@ -454,23 +453,12 @@
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Pós-Graduação</h4>
     <hr>
-    <p>
+    <p class="fst-normal fs-5">
       O curso de Engenharia da computação, a partir dessas necessidades, contempla os conhecimentos necessários à coordenação de projetos envolvendo redes de computadores, engenharia de softwares e manufatura digital para a Indústria 4.0. Além da parte técnica serão abordados assuntos que contornam as estruturas de computadores. O aluno poderá também optar por disciplinas eletivas que complementem a área de interesse. O curso se destina a profissionais que atuam ou que desejam atuar no segmento de redes de computadores e desenvolvimento de softwares e necessitem consolidar conhecimentos teóricos e práticos. Este curso apresenta os fundamentos necessários e a compreensão dos mecanismos de operação das diferentes tecnologias para o projeto, manutenção, gerenciamento e segurança das sistemas computacionais. É dotado de disciplinas teóricas que visam a exploração de conceitos e das técnicas subjacentes. O currículo se divide em disciplinas vinculadas a conteúdos básicos e específicos.
     </p>
   </div>
-  
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="aluno">
-      <h4 class="display-7">Perfil do Aluno</h4>
-        <hr>
-        <p>
-          O aluno, para participar do curso, deve ter vontade de se aprofundar em temas importantes de gestão e de tecnologia de sistemas computacionais. Ter vontade de liderar e de comandar é fundamental para o especialista que pode assumir um posto de comando em empresas. Também, entende-se que o espírito empreendedor pode auxiliar o aluno para, com os conhecimentos trabalhados nas disciplinas do curso, montar sua própria empresa ou trabalhar como um consultor no mercado de trabalho. Público-alvo: engenheiros, tecnólogos, gestores de TI em empresas, desenvolvedores de software, empreendedores, produtores na área de tecnologia e demais profissionais graduados que desejam especialização no mundo da tecnologia da informação.
-        </p>
-    </div>
-    <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-2" id="aluno_img">
-      <img src="img/aluno.png" class="img_aluno">
-    </div>
-  </div>
-  </div>
+</div>
+</div>
 
 <!-- Mercado de Trabalho -->
 
@@ -481,13 +469,13 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
       <h4 class="display-6">Mercado de Trabalho</h4>
       <hr>
-      <p>
+      <p class="fst-normal fs-5">
         O mercado de trabalho para profissionais da área de tecnologia da Informação (TI) e ENGENHARIA DA COMPUTAÇÃO é muito dinâmico e competitivo. Além dos profissionais formados na área devemos contar com aqueles que são autodidatas e, ainda, os vindos de outras graduações. Para contornar essa situação, espera-se que os profissionais se capacitem em níveis mais avançados com os cursos de especialização. Um mercado de trabalho dinâmico exige um profissional também dinâmico.
       </p>
     </div>
     
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-        <p class="fst-normal">
+        <p class="fst-normal fs-5">
           Se você tem muito interesse em se tornar um Engenheiro de Computação, a dica é se desenvolver, principalmente, para a área de controle e automação. Isso porque as indústrias e fábricas precisam sempre aprimorar os processos para se manterem à frente no mercado e garantirem a inovação. Não à toa tantas indústrias têm apostado em setores de inovação, se aproximando de startups. O desenvolvimento e o aprimoramento de softwares também é outro campo de oportunidade que merece destaque. Com certeza você já ouviu sobre companhias SaaS, ou seja, de Software as a Service, que têm crescido muito ao oferecerem os mais variados sistemas para empresas dos mais diversos tamanhos.
         </p>
       </div>
@@ -496,7 +484,7 @@
       </div>
     
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
-      <p class="fst-normal">
+      <p class="fst-normal fs-5">
         O mercado de trabalho para profissionais formados em Engenharia da Computação está em alta e em constante crescimento. O engenheiro da computação é um profissional bastante versátil e atua em vários setores da indústria.
         <br>
         Algumas das principais indústrias que contratam engenheiros da computação são:
@@ -574,37 +562,40 @@
 </div>
 
 <div class="container" id="depoimento">
-
     <div class="row">
-
-<div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
-  <h4 class="display-6">Depoimento</h4>
-  <hr>
-</div>
-</div>
-</div>
-<footer id="footer">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <div class="container" id="informa">
-            <p class="text-black texto-footer ">
-                <strong>
-                    Matheus Yamamoto Dias<br>
-                </strong>
-                16 anos<br>
-                ETEC de Registro<br>
-                Professor: Frederico Barbosa Muniz
-            </p>
-          </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
+        <h4 class="display-6">Depoimento</h4>
+        <hr>
         </div>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="icones">
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://twitter.com/yamasss_"><i class="bi bi-twitter" id="icone_footer"></i></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.instagram.com/yaamasss/"><i class="bi bi-instagram" id="icone_footer"></i></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-linkedin" id="icone_footer"></i></svg></a></li>
-          <li class="ms-3"><a class="text-muted" target="_blank" href="https://github.com/yHiroshiz"><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
-        </ul>
+    </div>
+</div>
+
+<div class="container">
+<div class="row">
+    <footer id="footer">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <div class="container" id="informa">
+                    <p class="text-black texto-footer ">
+                    <strong>
+                        Matheus Yamamoto Dias<br>
+                    </strong>
+                        16 anos<br>
+                        ETEC de Registro<br>
+                        Professor: Frederico Barbosa Muniz
+                    </p>
+                </div>
+            </div>
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex" id="icones">
+                <li class="ms-3"><a class="text-muted" target="_blank" href="https://twitter.com/yamasss_"><i class="bi bi-twitter" id="icone_footer"></i></a></li>
+                <li class="ms-3"><a class="text-muted" target="_blank" href="https://www.instagram.com/yaamasss/"><i class="bi bi-instagram" id="icone_footer"></i></a></li>
+                <li class="ms-3"><a class="text-muted" target="_blank" href=""><i class="bi bi-linkedin" id="icone_footer"></i></svg></a></li>
+                <li class="ms-3"><a class="text-muted" target="_blank" href="https://github.com/yHiroshiz"><i class="bi bi-github" id="icone_footer"></i></svg></a></li>
+            </ul>
       </footer>
   </footer>
+</div>
+</div>
 
 </body>
     <!-- Swiper JS -->
