--- a/index.html
+++ b/index.html
@@ -64,35 +64,35 @@
 <!-- Perfil -->
 
 <div class="container" id="perfil">
-
 <div class="row">
 
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
   <h4 class="display-6">Perfil</h4>
   <hr>
-  <p class="fst-normal fs-5">
+  <p class="fst-normal" id="text-geral">
     O profissional formado em Engenharia da Computação é capaz de projetar e construir hardware e software. O hardware consiste na parte física do computador, suas estruturas e componentes e seus periféricos (como teclado, mouse e monitor). Nessa área, o engenheiro de computação faz a integração de circuitos eletrônicos da máquina e desenvolve placas de ligação entre o equipamento e seus acessórios.
   </p>
 </div>
 
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-    <p class="fst-normal fs-5">
+    <p class="fst-normal" id="text-geral">
       O engenheiro de computação projeta soluções em tecnologia da informação, identificando problemas e oportunidades. Ele cria protótipos, valida novas tecnologias e projeta aplicativos em linguagem de baixo, médio e alto nível. O profissional da Engenharia de Computação também implementa soluções em tecnologia da informação, gerencia ambientes operacionais, elabora documentação, fornece suporte técnico e organiza treinamentos a usuários. A carreira em Engenharia de Computação oferece boas perspectivas, pois é uma área que continua aquecida mesmo com o país em crise. Há elevada demanda por profissionais qualificados, especialmente na área de big data e desenvolvimento de aplicativos.
     </p>
   </div>
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="perfil_img">
-    <img src="img/perfil.jpg" class="img_perfil">
+    <img src="img/perfil.jpg" class="img-fluid img_perfil">
   </div>
 
 
 <div class="container" id="requisitos">
-  <div class="card">
+  <div class="card" id="card-requisitos">
     <div class="card-body">
         <h4 class="display-7">Requisitos</h4>
-      <p class="card-text fs-5">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
-
+      <p class="card-text" id="text-geral">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
         Para começar a atuar como um engenheiro de computação, existem dois pré-requisitos:
         <hr>
+        </p>
+        <p id="text-geral">
         - ter um diploma de curso superior em Engenharia de Computação;
         <br>
         - ser registrado no Conselho Regional de Engenharia, Arquitetura e Agronomia (Crea), o que só é possível após a conclusão da formação.
@@ -113,14 +113,14 @@
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Curso</h4>
     <hr>
-    <p class="fst-normal fs-5">
+    <p class="fst-normal" id="text-geral">
       O curso foca no estudo integrando as áreas de Engenharia Elétrica (hardware) e Ciência da Computção (software), também dando base para as áreas de gerenciamento de projetos, modelagem, desenvolvimento e avaliação de sistemas.
     </p>
   </div>
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
     <div class="card">
       <div class="card-body">
-        <p class="card-text fs-5">Além disso o Engenheiro de Computação aborda os mais diversos aspectos tecnológicos, tais como: redes de computadores, comunicação de dados, bancos de dados, computação gráfica, sistemas digitais, circuitos elétricos, robótica e automação, entre outros. Em geral, o curso de Engenharia de Computação estuda, de forma profunda e abrangente, o desenvolvimento e gerência de sistemas digitais e elétricos, suas aplicações e tecnologias relacionadas.
+        <p class="card-text" id="text-geral">Além disso o Engenheiro de Computação aborda os mais diversos aspectos tecnológicos, tais como: redes de computadores, comunicação de dados, bancos de dados, computação gráfica, sistemas digitais, circuitos elétricos, robótica e automação, entre outros. Em geral, o curso de Engenharia de Computação estuda, de forma profunda e abrangente, o desenvolvimento e gerência de sistemas digitais e elétricos, suas aplicações e tecnologias relacionadas.
           </p>
       </div>
     </div>
@@ -128,7 +128,7 @@
   <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
     <div class="card">
       <div class="card-body">
-        <p class="card-text fs-5">O engenheiro de computação também poderá atuar em organizações que necessitem de instalação, operação e manutenção da rede de computadores, transmissão de dados e sistemas de automação comercial e industrial. Há ainda a opção de se manter no meio acadêmico, para dar aulas em universidades e desenvolver pesquisas. O tipo de formação para o curso de Engenharia de Computação é: bacharelado.
+        <p class="card-text" id="text-geral">O engenheiro de computação também poderá atuar em organizações que necessitem de instalação, operação e manutenção da rede de computadores, transmissão de dados e sistemas de automação comercial e industrial. Há ainda a opção de se manter no meio acadêmico, para dar aulas em universidades e desenvolver pesquisas. O tipo de formação para o curso de Engenharia de Computação é: bacharelado.
           </p>
       </div>
     </div>
@@ -138,7 +138,7 @@
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="como">
   <h4 class="display-7 fs-3">Como é o curso</h4>
     <hr>
-  <p class="fst-normal fs-5">
+  <p class="fst-normal" id="text-geral">
     O curso de Engenharia de Computação habilita a pessoa para trabalhar com o desenvolvimento e planejamento de softwares e hardwares. Com essa formação, ela poderá projetar, programar e gerenciar sistemas computacionais, além de criar e projetar computadores, periféricos e circuitos. De acordo com o Ministério da Educação (MEC), a obtenção de qualquer diploma em Engenharia está condicionada à produção de um trabalho de conclusão de curso (TCC) e estágio obrigatório supervisionado de no mínimo 160 horas. O MEC também estabelece diretrizes sobre quanto tempo dura o curso de Engenharia de Computação: é obrigatório que a graduação tenha pelo menos 3.200 horas totais. A duração média é de 5 anos. De acordo com as Diretrizes Curriculares Nacionais definidas pelo Ministério da Educação, o curso de Engenharia de Computação deve contar com os seguintes conteúdos básicos e tecnológicos:
   </p>
 </div>
@@ -328,6 +328,9 @@
 <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="faculdades">
   <h3 class="display-7">Faculdades</h3>
   <hr>
+    <p class="fst-normal" id="text-geral">
+      Temos as faculdades da Engenharia da Computação onde podemos encontrar faculdades que duram de 3 a 5 anos, preparando o aluno para saber mais sobre essa área, com seus valores variando de 300 R$ a 2500 R$ de mensalidade, abaixo podemos ver as opções de faculdades:
+    </p>
 </div>
 <div class="container-slider">
     <div class="slide-container swiper">
@@ -447,14 +450,27 @@
 <!-- Pós-graduação -->
 
 <div class="container" id="pos_graduacao">
-
   <div class="row">
   
   <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
     <h4 class="display-6">Pós-Graduação</h4>
     <hr>
-    <p class="fst-normal fs-5">
-      O curso de Engenharia da computação, a partir dessas necessidades, contempla os conhecimentos necessários à coordenação de projetos envolvendo redes de computadores, engenharia de softwares e manufatura digital para a Indústria 4.0. Além da parte técnica serão abordados assuntos que contornam as estruturas de computadores. O aluno poderá também optar por disciplinas eletivas que complementem a área de interesse. O curso se destina a profissionais que atuam ou que desejam atuar no segmento de redes de computadores e desenvolvimento de softwares e necessitem consolidar conhecimentos teóricos e práticos. Este curso apresenta os fundamentos necessários e a compreensão dos mecanismos de operação das diferentes tecnologias para o projeto, manutenção, gerenciamento e segurança das sistemas computacionais. É dotado de disciplinas teóricas que visam a exploração de conceitos e das técnicas subjacentes. O currículo se divide em disciplinas vinculadas a conteúdos básicos e específicos.
+    <p class="fst-normal" id="text-geral">
+      O curso de Engenharia da computação, a partir dessas necessidades, contempla os conhecimentos necessários à coordenação de projetos envolvendo redes de computadores, engenharia de softwares e manufatura digital para a Indústria 4.0. Além da parte técnica serão abordados assuntos que contornam as estruturas de computadores. O aluno poderá também optar por disciplinas eletivas que complementem a área de interesse.
+    </p>
+  </div>
+  <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
+    <p class="fst-normal" id="text-geral">
+      O engenheiro de computação projeta soluções em tecnologia da informação, identificando problemas e oportunidades. Ele cria protótipos, valida novas tecnologias e projeta aplicativos em linguagem de baixo, médio e alto nível. O profissional da Engenharia de Computação também implementa soluções em tecnologia da informação, gerencia ambientes operacionais, elabora documentação, fornece suporte técnico e organiza treinamentos a usuários. A carreira em Engenharia de Computação oferece boas perspectivas, pois é uma área que continua aquecida mesmo com o país em crise. Há elevada demanda por profissionais qualificados, especialmente na área de big data e desenvolvimento de aplicativos.
+    </p>
+  </div>
+  <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="aluno_img">
+    <img src="img/aluno.png" class="img-fluid img_aluno">
+  </div>
+
+  <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
+    <p class="fst-normal" id="text-geral">
+      Bom na engenharia da Computação temos o bacharelado que é uma formação de nível superior que confere grau de bacharel. Com duração média entre 3 a 6 anos, o curso de bacharelado prepara profissionais generalistas com sólidos conhecimentos sobre a base de uma profissão.
     </p>
   </div>
 </div>
@@ -469,22 +485,22 @@
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
       <h4 class="display-6">Mercado de Trabalho</h4>
       <hr>
-      <p class="fst-normal fs-5">
+      <p class="fst-normal" id="text-geral">
         O mercado de trabalho para profissionais da área de tecnologia da Informação (TI) e ENGENHARIA DA COMPUTAÇÃO é muito dinâmico e competitivo. Além dos profissionais formados na área devemos contar com aqueles que são autodidatas e, ainda, os vindos de outras graduações. Para contornar essa situação, espera-se que os profissionais se capacitem em níveis mais avançados com os cursos de especialização. Um mercado de trabalho dinâmico exige um profissional também dinâmico.
       </p>
     </div>
     
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-        <p class="fst-normal fs-5">
+        <p class="fst-normal" id="text-geral">
           Se você tem muito interesse em se tornar um Engenheiro de Computação, a dica é se desenvolver, principalmente, para a área de controle e automação. Isso porque as indústrias e fábricas precisam sempre aprimorar os processos para se manterem à frente no mercado e garantirem a inovação. Não à toa tantas indústrias têm apostado em setores de inovação, se aproximando de startups. O desenvolvimento e o aprimoramento de softwares também é outro campo de oportunidade que merece destaque. Com certeza você já ouviu sobre companhias SaaS, ou seja, de Software as a Service, que têm crescido muito ao oferecerem os mais variados sistemas para empresas dos mais diversos tamanhos.
         </p>
       </div>
       <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5" id="mercado_img">
-        <img src="img/mercado.jpg" class="img_mercado">
+        <img src="img/mercado.jpg" class="img-fluid img_mercado">
       </div>
     
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
-      <p class="fst-normal fs-5">
+      <p class="fst-normal" id="text-geral">
         O mercado de trabalho para profissionais formados em Engenharia da Computação está em alta e em constante crescimento. O engenheiro da computação é um profissional bastante versátil e atua em vários setores da indústria.
         <br>
         Algumas das principais indústrias que contratam engenheiros da computação são:
