--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
         </div>
     </div>
 </nav>
-<main class="container-fluid"></main>
+<main class="container-fluid">
+    <p class="tilt-main">
+        Engenharia da Computação 
+        <br> 
+        Tudo que deve saber sobre o curso de Engenharia da Computação
+    </p>
+</main>
 
 <!-- Inicio da Landing Page -->
 
