--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </nav>
 <main class="container-fluid">
     <p class="tilt-main">
-        Engenharia da Computação 
+        Engenharia de Computação 
         <br> 
         Tudo que deve saber sobre o curso de Engenharia da Computação
     </p>
