--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 <main class="container-fluid">
     <p class="tilt-main">
         Engenharia de Computação 
-        <br> 
-        Tudo que deve saber sobre o curso de Engenharia da Computação
     </p>
+    <p class="subtilt-main">    
+        Tudo que deve saber sobre o curso de Engenharia de Computação
+    </p>     
 </main>
 
 <!-- Inicio da Landing Page -->
@@ -101,7 +102,8 @@
 <div class="container" id="requisitos">
   <div class="card" id="card-requisitos">
     <div class="card-body">
-        <h4 class="display-7">Requisitos</h4>
+        <h4 class="display-7" id="text-subtilt">Requisitos</h4>
+        <br>
         <p class="card-text" id="text-geral">Um bom engenheiro da computação deve ter afinidade com Matemática, gostar de tecnologia e linguagens de programação. Como qualquer profissional da área de tecnologia, este engenheiro precisa acompanhar os avanços científicos e tecnológicos da área em que atua. Estar atualizado sobre as novidades é essencial para se manter competitivo no mercado de trabalho.
         Para começar a atuar como um engenheiro de computação, existem dois pré-requisitos:
         <hr>
@@ -150,7 +152,7 @@
     </div>
 
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="como">
-        <h4 class="display-7" id="tilt-comoe">Como é o curso</h4>
+        <h4 class="display-7" id="text-subtilt">Como é o curso</h4>
         <hr>
             <p class="fst-normal" id="text-geral">
             O curso de Engenharia de Computação habilita a pessoa para trabalhar com o desenvolvimento e planejamento de softwares e hardwares. Com essa formação, ela poderá projetar, programar e gerenciar sistemas computacionais, além de criar e projetar computadores, periféricos e circuitos. De acordo com o Ministério da Educação (MEC), a obtenção de qualquer diploma em Engenharia está condicionada à produção de um trabalho de conclusão de curso (TCC) e estágio obrigatório supervisionado de no mínimo 160 horas. O MEC também estabelece diretrizes sobre quanto tempo dura o curso de Engenharia de Computação: é obrigatório que a graduação tenha pelo menos 3.200 horas totais. A duração média é de 5 anos. De acordo com as Diretrizes Curriculares Nacionais definidas pelo Ministério da Educação, o curso de Engenharia de Computação deve contar com os seguintes conteúdos básicos e tecnológicos:
@@ -340,7 +342,7 @@
     </div>
 
     <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
-        <h3 class="display-7" id="faculdades">Faculdades</h3>
+        <h3 class="display-7" id="text-subtilt">Faculdades</h3>
         <hr>
         <p class="fst-normal" id="text-geral">
         Temos as faculdades da Engenharia da Computação onde podemos encontrar faculdades que duram de 3 a 5 anos, preparando o aluno para saber mais sobre essa área, com seus valores variando de 300 R$ a 2500 R$ de mensalidade, abaixo podemos ver as opções de faculdades:
