--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         </p>
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 p-5">
-        <p class="fst-normal" id="text-geral">
+        <p class="fst-normal" id="pos-texto">
             Bom na engenharia da Computação temos o bacharelado que é uma formação de nível superior que confere grau de bacharel. Com duração média entre 3 a 6 anos, o curso de bacharelado prepara profissionais generalistas com sólidos conhecimentos sobre a base de uma profissão.
         </p>
     </div>
