--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
                         <a class="nav-link active" aria-current="page" href="#mercado_trabalho">Mercado de Trabalho</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#depoimento">Depoimento</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#noticia">Notícias</a>
+                        <a class="nav-link active" aria-current="page" href="#entrevista">Entrevista</a>
                     </li>
                 </ul>
             </div>
@@ -588,12 +585,13 @@
 </div>
 </div>
 
-<div class="container" id="depoimento">
+<div class="container" id="entrevista">
 <div class="row">
 
-    <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5">
-        <h4 class="display-6" id="text-tilt">Depoimento</h4>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="entrevista-video">
+        <h4 class="display-6" id="text-tilt">Entrevista</h4>
         <hr>
+        <iframe width="760" height="415" src="./img/entrevista.mp4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0"></iframe>
     </div>
 </div>
 </div>
