--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="css/bootstrap-icons.css">
 
     <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+    <!-- CSS only -->
     <link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     
     <!-- JavaScript Bundle with Popper -->
@@ -53,6 +59,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#entrevista">Entrevista</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#blog">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -586,18 +595,29 @@
 </div>
 
 <div class="container" id="entrevista">
-<div class="row">
-
-    <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-5" id="entrevista-video">
+    <div class="row">
         <h4 class="display-6" id="text-tilt">Entrevista</h4>
         <hr>
-        <iframe width="760" height="415" src="./img/entrevista.mp4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0"></iframe>
+        <iframe width="500" height="450" src="./img/entrevista.mp4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" frameborder="0"></iframe>
     </div>
 </div>
 </div>
 
-<hr>
+<br><br>
 
+<div class="container" id="blog">
+    <div class="row">
+            <h4 class="display-6" id="text-tilt">Blog</h4>
+            <hr>
+            <script>
+                funcaoConteudo();
+            </script>
+        </div>
+    </div>
+    </div>
+
+
+<hr>
 <div class="container">
 <div class="row">
     <footer id="footer">
