versão xml text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a class="nav-link active" aria-current="page" href="#entrevista">Entrevista</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#blog">Blog</a>
+                        <a class="nav-link active" aria-current="page" href="#Noticia">Noticia</a>
                     </li>
                 </ul>
             </div>
@@ -605,9 +605,9 @@
 
 <br><br>
 
-<div class="container" id="blog">
+<div class="container" id="Noticia">
     <div class="row">
-            <h4 class="display-6" id="text-tilt">Blog</h4>
+            <h4 class="display-6" id="text-tilt">Noticia</h4>
             <hr>
             <script>
                 funcaoConteudo();
